--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,8 @@ javac.classpath=\
     ${file.reference.json.jar}:\
     ${file.reference.jtds-1.2.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.32-bin.jar}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
