--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,18 @@ dist.jar=${dist.dir}/DataScienceETL.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections-3.2.1.jar=biblioteca/commons-collections-3.2.1.jar
+file.reference.commons-digester-1.7.jar=biblioteca/commons-digester-1.7.jar
+file.reference.commons-logging-1.1.2.jar=biblioteca/commons-logging-1.1.2.jar
+file.reference.groovy-all-1.7.5.jar=biblioteca/groovy-all-1.7.5.jar
+file.reference.itext-2.1.7.jar=biblioteca/itext-2.1.7.jar
+file.reference.jasperreports-6.6.0.jar=biblioteca/jasperreports-6.6.0.jar
+file.reference.jasperreports-chart-customizers-6.6.0.jar=biblioteca/jasperreports-chart-customizers-6.6.0.jar
+file.reference.jasperreports-chart-themes-6.6.0.jar=biblioteca/jasperreports-chart-themes-6.6.0.jar
+file.reference.jasperreports-fonts-6.6.0.jar=biblioteca/jasperreports-fonts-6.6.0.jar
+file.reference.jasperreports-functions-6.6.0.jar=biblioteca/jasperreports-functions-6.6.0.jar
+file.reference.jasperreports-javaflow-6.6.0.jar=biblioteca/jasperreports-javaflow-6.6.0.jar
+file.reference.joda-time-2.1.jar=biblioteca/joda-time-2.1.jar
 file.reference.json.jar=biblioteca/json.jar
 file.reference.jtds-1.2.5.jar=biblioteca/jtds-1.2.5.jar
 file.reference.mysql-connector-java-5.1.32-bin.jar=biblioteca/mysql-connector-java-5.1.32-bin.jar
@@ -40,7 +52,19 @@ javac.classpath=\
     ${file.reference.jtds-1.2.5.jar}:\
     ${file.reference.mysql-connector-java-5.1.32-bin.jar}:\
     ${file.reference.ojdbc6.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.2.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.jasperreports-6.6.0.jar}:\
+    ${file.reference.jasperreports-chart-customizers-6.6.0.jar}:\
+    ${file.reference.jasperreports-chart-themes-6.6.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.6.0.jar}:\
+    ${file.reference.jasperreports-functions-6.6.0.jar}:\
+    ${file.reference.jasperreports-javaflow-6.6.0.jar}:\
+    ${file.reference.joda-time-2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
