--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.json.jar=biblioteca/json.jar
 file.reference.jtds-1.2.5.jar=biblioteca/jtds-1.2.5.jar
 file.reference.mysql-connector-java-5.1.32-bin.jar=biblioteca/mysql-connector-java-5.1.32-bin.jar
 file.reference.ojdbc6.jar=biblioteca/ojdbc6.jar
+file.reference.poi-4.1.0.jar=biblioteca\\poi-4.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -64,7 +65,8 @@ javac.classpath=\
     ${file.reference.jasperreports-fonts-6.6.0.jar}:\
     ${file.reference.jasperreports-functions-6.6.0.jar}:\
     ${file.reference.jasperreports-javaflow-6.6.0.jar}:\
-    ${file.reference.joda-time-2.1.jar}
+    ${file.reference.joda-time-2.1.jar}:\
+    ${file.reference.poi-4.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
